# Senior-Design

./: README.md
Basic-Chat/: Podfile
Basic-Chat/Basic Chat/: AppDelegate.swift  BLECentralViewController.swift  Info.plist  PeripheralTableViewCell.swift  UUIDKey.swift  UartModuleViewController.swift  VoiceViewController.swift
Basic-Chat/Basic Chat.xcodeproj/: project.pbxproj
Basic-Chat/Basic Chat.xcworkspace/: contents.xcworkspacedata
Basic-Chat/Basic Chat/Base.lproj/: LaunchScreen.storyboard  (+1 more)
CondimentExpress/: .gitignore  CMakeLists.txt  Makefile  README.md
CondimentExpress/main/: CMakeLists.txt  adc.c  adc.h  ble.c  gpio.c  gpio.h  htu21d.c  htu21d.h  hx711.c  hx711.h  hx711_2.c  hx711_2.h  main.c  pca9685.c  pwm.c  pwm.h  ssd1305.c  ssd1305.h  ssd1306.c  ssd1306.h  sx1509.c  sx1509.h  sx1509_reg.h  tmc2208.c  tmc2208.h
Senior Design PCB v0.1/: Schmatic 10.s#1  Schmatic 100.b#1  Schmatic 101.b#1  Schmatic 102.b#1  Schmatic 103.b#1  Schmatic 104.b#1  Schmatic 105.b#1  Schmatic 106.b#1  Schmatic 107.b#1  Schmatic 108.b#1  Schmatic 109.b#1  Schmatic 11.b#1  Schmatic 11.s#1  Schmatic 110.b#1  Schmatic 111.b#1  Schmatic 112.b#1  Schmatic 113.b#1  Schmatic 114.b#1  Schmatic 115.b#1  Schmatic 116.b#1  Schmatic 117.b#1  Schmatic 118.b#1  Schmatic 119.b#1  Schmatic 12.b#1  Schmatic 12.s#1  Schmatic 120.b#1  Schmatic 121.b#1  Schmatic 122.b#1  Schmatic 123.b#1  Schmatic 124.b#1  Schmatic 125.b#1  Schmatic 126.b#1  Schmatic 128.b#1  Schmatic 129.b#1  Schmatic 13.b#1  Schmatic 13.s#1  Schmatic 130.b#1  Schmatic 131.b#1  Schmatic 132.b#1  Schmatic 135.b#1  (+319 more)
(+7 files in other folders)
