idf_component_register(SRCS "main.c"
                            "pwm.c"
                            "adc.c"
                            "gpio.c"
                            "hx711.c"
                            "pca9685.c"
                            "htu21d.c"
                            "ssd1305.c"
                    INCLUDE_DIRS ".")
