idf_component_register(SRCS "main.c"
                            "tmc2208.c"
                            "gpio.c"
                            "hx711.c"
                            "hx711_2.c"
                            "pca9685.c"
                            "htu21d.c"
                            "ssd1306.c"
                            "sx1509.c"
                            "ble.c"
                    INCLUDE_DIRS ".")
